# DukeRecorder

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CPPLINT.cfg  vcpkg.json
.github/workflows/: ci.yml
cmake/: dependencies.cmake  google_style.cmake  platform.cmake
docs/: context.md
docs/specs/: P2-capture-encode.md
src/: cli.cpp  cli.h  main.cpp  recorder.cpp  recorder.h
src/capture/: capture_engine.h  dxgi_capture.cpp  dxgi_capture.h  test_capture.cpp  test_capture.h
src/core/: config.h  frame.h  platform.h  ring_buffer.h
src/encode/: annexb_writer.cpp  annexb_writer.h  color_convert.cpp  color_convert.h  encoder.h  x264_encoder.cpp  x264_encoder.h
src/mux/: raw_es_sink.cpp  raw_es_sink.h
tasks/: plan.md
tests/: CMakeLists.txt  test_annexb_writer.cpp  test_color_convert.cpp  test_main_args.cpp  test_raw_es_sink.cpp  test_recorder.cpp  test_ring_buffer.cpp  test_test_capture.cpp  test_x264_encoder.cpp
